fixe somme issues + restyle homepage

--- a/src/app/home-page/header-home/header-home.component.html
+++ b/src/app/home-page/header-home/header-home.component.html
@@ -1,10 +1,10 @@
 <header class="header">
 		<div class="container-fluid title-block">
-			<h1 class="h1-1">{{header.title}}</h1>
+			<img src="../../../assets/images/full-ogo.png" alt="" width = "200">
 			<h6 class="h3-1">{{header.citation}}</h6>
 			<div class="form-group">
-				<button type="button" class="btn-lg btn btn-search" routerLink="dashboard">
-				    Commencer
+				<button type="button" mat-raised-button routerLink="dashboard" color = "primary">
+				    Connexion
 			  		<i class="fas fa-arrow-right fa-lg"></i>
 		      	</button>
 		    </div>
