--- a/src/app/home-page/service/service.component.html
+++ b/src/app/home-page/service/service.component.html
@@ -1,7 +1,7 @@
 <!-- Icon Box -->
 	<div class="p-3 text-center">
     <div class="">
-      <i [className] = [icon] style="color :#FFAB00"></i>
+      <i [className] = [icon] style="color : #fa5f1a"></i>
     </div>
 		<div class="title">{{name}}</div>
 	  <div class="card-text">{{details}}</div>
