--- a/src/app/layout/list-user-fabricants/display-users/display-users.component.html
+++ b/src/app/layout/list-user-fabricants/display-users/display-users.component.html
@@ -4,7 +4,7 @@
       <h4>Les {{title}} de {{id}}</h4>
     </div>
     <div class="col-sm-4" style="text-align : right">
-      <button class="mx-2" mat-raised-button style="background : #228B22 ; color : #fff" (click) = "onCreateUser()">
+      <button matTooltip="Créer un Utilisateur" class="mx-2" mat-icon-button (click) = "onCreateUser()" color = "primary">
         <mat-icon>add</mat-icon>
       </button>
     </div>
