--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,9 +7,9 @@
           <app-notification [error] = "error"></app-notification>
           <mat-card class="example-card">
             <mat-card-content>
+              <img src="../assets/images/full-ogo.png" alt="Logo SAYARADZ" width="200"/>
               <h4>CONNEXION</h4>
               <h6>Connectez vous à votre compte</h6>
-              <img src="../assets/images/logo.png" alt="Logo SAYARADZ" width="200"/>
               <form [formGroup]="loginFormGroup">
                 <mat-form-field appearance="outline" style="width : 100%">
                   <mat-label>Entrez votre address e-mail</mat-label>
