--- a/src/app/home-page/footer-home/footer-home.component.html
+++ b/src/app/home-page/footer-home/footer-home.component.html
@@ -1,7 +1,7 @@
 <footer class="font-small blue pt-0">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3" style="background-color:#343a40; color:#fff">© 2018 Copyright:
-      <a href="#" style="color: #FFAB00"> newvision.com</a>
+      <a href="#" style="color: #fa5f1a"> newvision.com</a>
     </div>
     <!-- Copyright -->
 </footer>
