--- a/src/app/home-page/header-home/header-home.component.scss
+++ b/src/app/home-page/header-home/header-home.component.scss
@@ -4,14 +4,7 @@
 	height: 100%;
 	min-width: 100%;
 	min-height: 100%;
-	background:
-	/* top, transparent red, faked with gradient */
-    linear-gradient(
-      rgba(0,0,0, 0.45),
-      rgba(0,0,0, 0.45)
-    ),
-    /* bottom, image */
-	url('../../../assets/background.jpg');
+	background:url('../../../assets/background.jpg');
 	background-attachment: fixed;
 	background-size: cover;
 	height: 700px;
