--- a/src/app/home-page/mission-home/mission-home.component.html
+++ b/src/app/home-page/mission-home/mission-home.component.html
@@ -7,7 +7,7 @@
   				    <h4 class="card-title">{{mission.title}}</h4>
   				    <div class="row">
   				    	<div class="col-sm-12 col-lg-7 col-xl-8">
-  				    		<div style="width: 100px; border: 1px solid #FFAB00; margin-bottom: 50px;"></div>
+  				    		<div style="width: 100px; border: 1px solid #fa5f1a; margin-bottom: 50px;"></div>
   				    		<p class="card-text">
   						    	{{mission.content}}
   							</p>
