--- a/src/app/home-page/service-view/service-view.component.html
+++ b/src/app/home-page/service-view/service-view.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid mt-5 pt-5" style="background-color: #EEEEEE;">
 		<div class="container">
       <h4 class="title">Nos Services</h4>
-      <div style="width: 100px; border: 1px solid #FFAB00; margin-bottom: 50px;"></div>
+      <div style="width: 100px; border: 1px solid #fa5f1a; margin-bottom: 50px;"></div>
 			<div class="row justify-content-md-center">
         <div class="col-xs-12 col-sm-6 col-md-4 mb-5 box-shadow-hover" *ngFor="let service of servicesArray">
           <app-service [name]="service.name" [details]="service.details" [icon] = "service.icon"></app-service>
