--- a/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.html
+++ b/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.html
@@ -21,8 +21,8 @@
         <ng-container matColumnDef="aperçu">
           <th mat-header-cell *matHeaderCellDef> Aperçu </th>
           <td mat-cell *matCellDef="let element">
-              <mat-icon>settings</mat-icon>
-              {{element.values}}
+              <span *ngFor = "let value of element.values">{{value.value}}</span>
+
           </td>
         </ng-container>
 
