--- a/src/app/layout/list-modeles/list-versions/list-versions.component.html
+++ b/src/app/layout/list-modeles/list-versions/list-versions.component.html
@@ -32,11 +32,6 @@
                   <app-notification class="ma-2" [error] = "error"></app-notification>
                     <table id="my-table" mat-table [dataSource]="versionsTable" matSort class="mat-elevation-z8" style="width : 100%">
 
-                      <ng-container matColumnDef="index">
-                        <th mat-header-cell *matHeaderCellDef > No. </th>
-                        <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
-                      </ng-container>
-
                       <ng-container matColumnDef="version">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
                         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -65,6 +60,15 @@
                             <mat-icon>color_lens</mat-icon>
                           </button>
                          </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="vehicles">
+                        <th mat-header-cell *matHeaderCellDef > Véhicules </th>
+                        <td mat-cell *matCellDef="let element; let i = index;">
+                          <button matTooltip = "Afficher les véhicules" class="mx-2" mat-icon-button color="primary" [routerLink] = "[path+element.id]">
+                            <mat-icon>directions_car</mat-icon>
+                          </button>
+                        </td>
                       </ng-container>
 
                       <ng-container matColumnDef="manipulations">
