--- a/src/app/layout/list-user-fabricants/create-user-fabricant-dialog/create-user-fabricant-dialog.component.scss
+++ b/src/app/layout/list-user-fabricants/create-user-fabricant-dialog/create-user-fabricant-dialog.component.scss
@@ -1,3 +1,8 @@
 .container-dialog{
   width: 500px;
 }
+.underline{
+  border-bottom: solid 2px #FA5F1A;
+  margin-bottom: 20px;
+  display: inline-block;
+}
