--- a/src/app/layout/list-user-fabricants/list-user-fabricants.component.html
+++ b/src/app/layout/list-user-fabricants/list-user-fabricants.component.html
@@ -1,27 +1,16 @@
 <div class="container pt-5">
-    <app-page-header [heading]="'Gestion des admnistrateur fabricants'" [icon]="'fa-table'"></app-page-header>
+    <app-page-header [heading]="'Gestion des utilisateurs'" [icon]="'fa-table'"></app-page-header>
     <div class="row">
         <div class="col col-xl-12 col-lg-12">
             <div class="card mb-3">
                 <div class="card-header">
                   <div class="row">
-                    <div class="col-sm-8">
-                      <mat-form-field style="width : 100%">
+                    <div class="col-sm-12">
+                      <mat-form-field appearance="outline" style="width : 100%;">
+                        <mat-label> Chercher un utilisateur</mat-label>
+                        <input matInput placeholder="entrez un nom..">
                         <mat-icon matPrefix>search</mat-icon>
-                        <input matInput placeholder="Fabricant..." />
                       </mat-form-field>
-                    </div>
-                    <div class="col-sm-4" style = "text-align:right">
-                      <mat-form-field>
-                        <mat-label>Critéres</mat-label>
-                        <mat-select matNativeControl required>
-                          <mat-option value="marque">Marque</mat-option>
-                          <mat-option value="pays">Pays</mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                      <button class="mx-2" mat-icon-button color="primary">
-                        <mat-icon>more_vert</mat-icon>
-                      </button>
                     </div>
                   </div>
                 </div>
