--- a/src/app/layout/list-vehicules/list-vehicules.component.html
+++ b/src/app/layout/list-vehicules/list-vehicules.component.html
@@ -4,12 +4,29 @@
         <div class="col col-xl-12 col-lg-12">
             <div class="card mb-3">
                 <div class="card-header">
-                    Liste des véhicules
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <mat-form-field appearance="outline" style="width : 100%;">
+                        <mat-label> Chercher un véhicule</mat-label>
+                        <input matInput placeholder="entrez un mot clé">
+                        <mat-icon matPrefix>search</mat-icon>
+                      </mat-form-field>
+                    </div>
+                    <div class="col-sm-4" style = "text-align:right; padding-top : 20px;">
+                      <button matTooltip="Imprimer" class="mx-2" mat-icon-button color = "primary" (click)= "printCars()">
+                        <mat-icon>print</mat-icon>
+                      </button>
+                      <button matTooltip="Créer nouveau véhicule" class="mx-2" mat-icon-button (click) = "onCreateCar()" color = "primary">
+                        <mat-icon>add</mat-icon>
+                      </button>
+                      <button matTooltip = "Charger un fichier de stock" class="mx-2" mat-icon-button color="primary" (click) = "onUploadCarsFile()">
+                        <mat-icon>cloud_upload</mat-icon>
+                      </button>
+                    </div>
+                  </div>
                 </div>
                 <div class="card-body table-responsive">
-                  <mat-paginator [length]="lengthList" [pageSize]="5"
-                    [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
-                    <table mat-table [dataSource]="vehicules" matSort class="mat-elevation-z8" style="width : 100%">
+                    <table mat-table [dataSource]="vehicules" class="mat-elevation-z8" style="width : 100%">
 
                       <ng-container matColumnDef="index">
                         <th mat-header-cell *matHeaderCellDef > No. </th>
@@ -17,7 +34,7 @@
                       </ng-container>
 
                       <ng-container matColumnDef="numéro de chassis">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Numéro de chassis </th>
+                        <th mat-header-cell *matHeaderCellDef> Numéro de chassis </th>
                         <td mat-cell *matCellDef="let element"> {{element.numChassis}} </td>
                       </ng-container>
 
@@ -28,7 +45,10 @@
 
                       <ng-container matColumnDef="couleur">
                         <th mat-header-cell *matHeaderCellDef> Couleur </th>
-                        <td mat-cell *matCellDef="let element"> {{element.couleur}} </td>
+                        <td mat-cell *matCellDef="let element" [matTooltip] = "element.couleur.name+ ' ' + element.couleur.value">
+                          <div class="icon-logo" [style.background] = "element.couleur.value">
+                          </div>
+                         </td>
                       </ng-container>
 
                       <ng-container matColumnDef="concessionnaire">
@@ -41,9 +61,6 @@
                         <td mat-cell *matCellDef="let element">
                           <button class="mx-2" mat-flat-button  (click) = "onDelete(element.id)">
                             <mat-icon>delete</mat-icon>
-                          </button>
-                          <button class="mx-2" mat-flat-button (click) = "onUpdate(element)">
-                            <mat-icon>create</mat-icon>
                           </button>
                         </td>
                       </ng-container>
