fix options issue

--- a/src/app/layout/list-modeles/create-modele-dialog/create-modele-dialog.component.html
+++ b/src/app/layout/list-modeles/create-modele-dialog/create-modele-dialog.component.html
@@ -48,7 +48,7 @@
                 </mat-list>
               </div>
               <div class="col-sm-6">
-                <h6>Veuillez introduire la liste des options disponibles : </h6>
+                <h6>Veuillez introduire la liste des options séparées par ';' : </h6>
                 <div class="row">
                   <div class="col-sm-5">
                     <mat-form-field appearance="outline" style="width : 100%">
@@ -64,7 +64,7 @@
 
                   <div class="col-sm-5">
                     <mat-form-field appearance="outline" style="width : 100%">
-                      <mat-label> Valeur de l'option </mat-label>
+                      <mat-label> Liste des valeurs  </mat-label>
                       <input formControlName="valueOption" matInput placeholder="Valeur de l'option">
                     </mat-form-field>
                   </div>
