--- a/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.html
+++ b/src/app/layout/list-modeles/list-options-dialog/list-options-dialog.component.html
@@ -21,7 +21,7 @@
         <ng-container matColumnDef="aperçu">
           <th mat-header-cell *matHeaderCellDef> Aperçu </th>
           <td mat-cell *matCellDef="let element">
-              <span *ngFor = "let value of element.values">{{value.value}}</span>
+              <span *ngFor = "let value of element.values">{{value.value}} ;</span>
 
           </td>
         </ng-container>
