update some vues

--- a/src/app/home-page/header-home/header-home.component.html
+++ b/src/app/home-page/header-home/header-home.component.html
@@ -1,6 +1,6 @@
 <header class="header">
 		<div class="container-fluid title-block">
-			<img src="../../../assets/images/full-ogo.png" alt="" width = "200">
+			<img src="../../../assets/images/logo_white.png" alt="" width = "300">
 			<h6 class="h3-1">{{header.citation}}</h6>
 			<div class="form-group">
 				<button type="button" mat-raised-button routerLink="dashboard" color = "primary">
