--- a/src/app/layout/list-fabricants/update-fabriquat-dialog/update-fabriquat-dialog.component.scss
+++ b/src/app/layout/list-fabricants/update-fabriquat-dialog/update-fabriquat-dialog.component.scss
@@ -3,6 +3,7 @@
   height: 100%;
 }
 .underline{
-  border-bottom: solid 2px #FFAB00;
-  width: 100px;
+  border-bottom: solid 2px #FA5F1A;
+  margin-bottom: 20px;
+  display: inline-block;
 }
