--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -7,17 +7,9 @@
           <mat-card-subtitle><mat-icon color= "primary"><i class="fas fa-award"></i></mat-icon> {{type}}</mat-card-subtitle>
         </mat-card-header>
       </mat-card>
-      <mat-accordion>
-        <mat-expansion-panel *ngFor= "let link of links" [hidden]="link.hidden">
-          <mat-expansion-panel-header  class="a-item">
-                <i [className]=link.icon></i>&nbsp;
-                <span>{{link.header}}</span>
-          </mat-expansion-panel-header>
-          <a  class="list-group-item" *ngFor = "let sublink of link.sublinks" [routerLink]=sublink.route >
-              <i [className]=sublink.icon></i>&nbsp;
-              <span>{{sublink.header}}</span>
-          </a>
-        </mat-expansion-panel>
-      </mat-accordion>
+      <a  class="list-group-item" *ngFor= "let link of links" [routerLink]=link.route >
+        <i [className]=link.icon></i>&nbsp;
+        <span>{{link.header}}</span>
+      </a>
     </div>
 </nav>
