--- a/src/app/layout/list-fabricants/list-fabricants.component.html
+++ b/src/app/layout/list-fabricants/list-fabricants.component.html
@@ -8,24 +8,18 @@
             <div class="card mb-3">
                 <div class="card-header ">
                   <div class="row">
-                    <div class="col-sm-7">
-                      <mat-form-field style="width : 100%">
+                    <div class="col-sm-8">
+                      <mat-form-field appearance="outline" style="width : 100%;">
+                        <mat-label> Chercher un fabricant</mat-label>
+                        <input matInput placeholder="entrez un mot clé">
                         <mat-icon matPrefix>search</mat-icon>
-                        <input matInput placeholder="Fabricant..." />
                       </mat-form-field>
                     </div>
-                    <div class="col-sm-5" style = "text-align:right">
-                      <mat-form-field>
-                        <mat-label>Critéres</mat-label>
-                        <mat-select matNativeControl required>
-                          <mat-option value="volvo">Marque</mat-option>
-                          <mat-option value="saab">Pays</mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                      <button class="mx-2" mat-raised-button style="background : #FFAB00 ; color : #fff">
+                    <div class="col-sm-4" style = "text-align:right; padding-top : 20px;">
+                      <button matTooltip="Imprimer" class="mx-2" mat-icon-button color = "primary" (click)= "onPrint()">
                         <mat-icon>print</mat-icon>
                       </button>
-                      <button class="mx-2" mat-raised-button (click) = "onCreate()" style="background : #228B22 ; color : #fff">
+                      <button matTooltip="Créer nouveau fabricant" class="mx-2" mat-icon-button (click) = "onCreate()" color = "primary">
                         <mat-icon>add</mat-icon>
                       </button>
                     </div>
@@ -35,23 +29,17 @@
                 <div class="card-body table-responsive">
                   <mat-paginator [length]="lengthList" [pageSize]="5"
                     [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
-                    <table mat-table [dataSource]="fabricants" matSort class="mat-elevation-z8" style="width : 100%">
-
-                      <ng-container matColumnDef="index">
-                        <th mat-header-cell *matHeaderCellDef > No. </th>
-                        <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
-                      </ng-container>
-
-                      <ng-container matColumnDef="marque">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Marque </th>
-                        <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
-                      </ng-container>
-
+                    <table id="my-table" mat-table [dataSource]="fabricants" matSort class="mat-elevation-z8" style="width : 100%">
                       <ng-container matColumnDef="logo">
                         <th mat-header-cell *matHeaderCellDef> Logo </th>
                         <td mat-cell *matCellDef="let element">
                             <img src="{{ROOT_URL}}/{{element.logo}}" class="icon-logo">
                          </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="marque">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Marque </th>
+                        <td mat-cell *matCellDef="let element"> {{element.brand}} </td>
                       </ng-container>
 
                       <ng-container matColumnDef="createdAt">
@@ -67,23 +55,17 @@
                       <ng-container matColumnDef="manipulations">
                         <th mat-header-cell *matHeaderCellDef> Manipulations </th>
                         <td mat-cell *matCellDef="let element, let i = index;">
-                          <button class="mx-2" mat-icon-button color="warn"  (click) = "onDelete(element.id,i)">
+                          <button matTooltip = "Supprimer" class="mx-2" mat-icon-button color="warn"  (click) = "onDelete(element.id,i)">
                             <mat-icon>delete</mat-icon>
                           </button>
-                          <button class="mx-2" mat-icon-button color="primary" (click) = "onUpdate(element,i)">
+                          <button matTooltip = "Modifier" class="mx-2" mat-icon-button color="accent" (click) = "onUpdate(element,i)">
                             <mat-icon>create</mat-icon>
                           </button>
-                          <button class="mx-2" mat-icon-button color="accent" (click) = "onDisplayAdminPage(element.id)">
+                          <button matTooltip = "Afficher les administrateurs" class="mx-2" mat-icon-button color="primary" (click) = "onDisplayAdminPage(element.id)">
                             <mat-icon><i class="fas fa-user-tie"></i></mat-icon>
                           </button>
-                          <mat-slide-toggle
-                          checked = "true"
-                          color = "primary"
-                            >
-                            activer
-                          </mat-slide-toggle>
-                          <button class="mx-2" mat-icon-button color="accent" (click) = "onDisplayContract(element.id)">
-                            <mat-icon>assignment</mat-icon>
+                          <button matTooltip = "Ajouter un compte de paiment" class="mx-2" mat-icon-button color="primary" (click) = "onDisplayContract(element.id)">
+                            <mat-icon>payment</mat-icon>
                           </button>
                         </td>
                       </ng-container>
