--- a/src/app/layout/profile/profile.component.html
+++ b/src/app/layout/profile/profile.component.html
@@ -17,19 +17,22 @@
             <h5>Informations personnelles :</h5>
             <div class="row">
               <div class="col-sm-6 d-flex flex-column">
-                <mat-form-field>
-                  <input matInput placeholder="Nom"  formControlName="username" [value]=user.firstName/>
+                <mat-form-field appearance="outline" style="width : 100%">
+                  <mat-label> Nom </mat-label>
+                  <input matInput placeholder="Nom"  formControlName="username" [value]=user.firstName />
                 </mat-form-field>
               </div>
               <div class="col-sm-6 d-flex flex-column">
-                <mat-form-field>
-                  <input matInput placeholder="Prénom" formControlName="usersurname" [value]=user.lastName/>
+                <mat-form-field appearance="outline" style="width : 100%">
+                  <mat-label> Prénom </mat-label>
+                  <input matInput placeholder="Prénom" formControlName="usersurname" [value]=user.lastName />
                 </mat-form-field>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-6 d-flex flex-column">
-                <mat-form-field>
+                <mat-form-field appearance="outline" style="width : 100%">
+                  <mat-label> Email </mat-label>
                   <input matInput placeholder="Email" type="email" formControlName="email" [value] = user.email />
                   <mat-error *ngFor="let validation of account_validation_messages.email">
                   	<mat-error class="error-message" *ngIf="userFormGroup.get('email').hasError(validation.type) && (userFormGroup.get('email').dirty || userFormGroup.get('email').touched)">{{validation.message}}
@@ -38,20 +41,22 @@
                 </mat-form-field>
               </div>
               <div class="col-sm-6 d-flex flex-column">
-                <mat-form-field>
+                <mat-form-field appearance="outline" style="width : 100%">
+                  <mat-label> Numéro de téléphone </mat-label>
                   <input matInput placeholder="Phone" formControlName="phone" [value]=user.phone />
                 </mat-form-field>
               </div>
             </div>
-
-            <mat-form-field>
+            <mat-form-field appearance="outline" style="width : 100%">
+              <mat-label> Address </mat-label>
               <input matInput placeholder="Address" formControlName="address" [value]=user.address />
             </mat-form-field>
             <br>
             <h5>Choisir un mot de passe :</h5>
             <div class="row" [formGroup] = "matching_passwords">
               <div class="col-sm-6 d-flex flex-column">
-                <mat-form-field>
+                <mat-form-field appearance="outline" style="width : 100%">
+                  <mat-label> Mot de passe </mat-label>
                   <input matInput placeholder="Mot de passe" type="password" formControlName="password"/>
                   <mat-error *ngFor="let validation of account_validation_messages.password">
                   	<mat-error class="error-message" *ngIf="matching_passwords.get('password').hasError(validation.type) && (matching_passwords.get('password').dirty || matching_passwords.get('password').touched)">{{validation.message}}
@@ -60,7 +65,8 @@
                 </mat-form-field>
               </div>
               <div class="col-sm-6 d-flex flex-column">
-                <mat-form-field>
+                <mat-form-field appearance="outline" style="width : 100%">
+                  <mat-label> Confirmer le mot de passe </mat-label>
                   <input matInput placeholder="Confirmer le mot de passe" type="password" formControlName="confirmPassword"/>
                   <mat-error *ngFor="let validation of account_validation_messages.confirm_password">
                     <mat-error class="error-message" *ngIf="matching_passwords.get('confirmPassword').hasError(validation.type) && (matching_passwords.get('confirmPassword').dirty || matching_passwords.get('confirmPassword').touched)">{{validation.message}}</mat-error>
@@ -73,7 +79,7 @@
 
           </div>
           <div class="d-flex flex-row-reverse">
-            <button mat-flat-button color="primary" class="btn-search" type="submit">Enregistrer<mat-icon>save</mat-icon></button>
+            <button mat-raised-button color="primary" type="submit">Enregistrer<mat-icon>save</mat-icon></button>
           </div>
 
         </form>
